// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`line.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 69,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "s",
                "is_local": true,
                "location": 79,
                "typeName": {
                  "location": 81,
                  "names": [
                    {
                      "String": {
                        "sval": "line",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 31,
                          "sval": {
                            "sval": "{0,-1,5}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 23,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 40,
                          "sval": {
                            "sval": "{1,0,5}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 23,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 40,
                          "sval": {
                            "sval": "{0,3,0}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 28,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 45,
                          "sval": {
                            "sval": " (0,0), (6,6)",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "10,-10 ,-5,-4",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "[-1e6,2e2,3e5, -4e1]",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 31,
                          "sval": {
                            "sval": "{3,NaN,5}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "{NaN,NaN,NaN}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 28,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 45,
                          "sval": {
                            "sval": "[(1,3),(2,3)]",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 25,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 53,
                                    "sval": {
                                      "sval": "(3,1)",
                                    },
                                  },
                                },
                                "location": -1,
                                "typeName": {
                                  "location": 47,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "point",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 68,
                                    "sval": {
                                      "sval": "(3,2)",
                                    },
                                  },
                                },
                                "location": -1,
                                "typeName": {
                                  "location": 62,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "point",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "line",
                              },
                            },
                          ],
                          "location": 42,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 47,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 64,
                          "sval": {
                            "sval": "{}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "{0",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "{0,0}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "{0,0,1",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "{0,0,1}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "{0,0,1} x",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "(3asdf,2 ,3,4r2)",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "[1,2,3, 4",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "[(,2),(3,4)]",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "[(1,2),(3,4)",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "[(1,2),(1,2)]",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "line_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 42,
                                    "sval": {
                                      "sval": "(1,0)",
                                    },
                                  },
                                },
                                "location": -1,
                                "typeName": {
                                  "location": 36,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "point",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 57,
                                    "sval": {
                                      "sval": "(1,0)",
                                    },
                                  },
                                },
                                "location": -1,
                                "typeName": {
                                  "location": 51,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "point",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "line",
                              },
                            },
                          ],
                          "location": 31,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "line_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "true",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 9,
                            "sval": {
                              "sval": "{nan, 1, nan}",
                            },
                          },
                        },
                        "location": 24,
                        "typeName": {
                          "location": 26,
                          "names": [
                            {
                              "String": {
                                "sval": "line",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 31,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 33,
                            "sval": {
                              "sval": "{nan, 1, nan}",
                            },
                          },
                        },
                        "location": 48,
                        "typeName": {
                          "location": 50,
                          "names": [
                            {
                              "String": {
                                "sval": "line",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 68,
                "name": "false",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 68,
                            "sval": {
                              "sval": "{nan, 1, nan}",
                            },
                          },
                        },
                        "location": 83,
                        "typeName": {
                          "location": 85,
                          "names": [
                            {
                              "String": {
                                "sval": "line",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 90,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 92,
                            "sval": {
                              "sval": "{nan, 2, nan}",
                            },
                          },
                        },
                        "location": 107,
                        "typeName": {
                          "location": 109,
                          "names": [
                            {
                              "String": {
                                "sval": "line",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 60,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 78,
                          "sval": {
                            "sval": "{1, 1}",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 88,
                          "sval": {
                            "sval": "line",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 60,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "{1, 1}",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 45,
                                  "sval": {
                                    "sval": "line",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 47 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "{0, 0, 0}",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "line",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "{0, 0, 0}",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 48,
                                  "sval": {
                                    "sval": "line",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "{1, 1, a}",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "line",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "{1, 1, a}",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 48,
                                  "sval": {
                                    "sval": "line",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "{1, 1, 1e400}",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 43,
                          "sval": {
                            "sval": "line",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "{1, 1, 1e400}",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 52,
                                  "sval": {
                                    "sval": "line",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 53 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "(1, 1), (1, 1e400)",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 48,
                          "sval": {
                            "sval": "line",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`line.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "(1, 1), (1, 1e400)",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 57,
                                  "sval": {
                                    "sval": "line",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
